fix(tabs): added missing tabs-secondary-variant class to default tab view template
- we already had it added in edit which changed the layout in edit as opposed to view
- add the extra padding for tab-name class when inside accordion tab panels since that
  is where we need it, before rule added padding also when tabs were vertical

--- a/src/less/tabs.less
+++ b/src/less/tabs.less
@@ -104,16 +104,16 @@
     }
   }
 
+  .ui.accordion .title ~ .content.RRT__panel .tab-name {
+    padding: @tabAccordionContentPadding;
+  }
+
   @media not (prefers-reduced-motion) {
     .ui.accordion .title ~ .content.RRT__panel {
       display: block;
       padding: 0;
       animation: slide-up @animationDuration linear both;
       will-change: max-height, overflow, opacity;
-    }
-
-    .tab-name {
-      padding: @tabAccordionContentPadding;
     }
 
     .ui.accordion .title ~ .content.RRT__panel.active {
